Quick3DNodeInstantiator: fix crash when using async

Something in the asynchronous creation of elements in QtQuick has been changed
leading to elements of the instantiator being created out of order.

QQmlInstantiator and friends had been updated at the time when the QtQuick changes
were made but Quick3DNodeInstantiator was left out.

This patch incorporate changes that have been made into QQmlInstantiator
to correct out of order node creation.

Task-number: QTBUG-56368
Change-Id: I2aa7499e6dc08be329cd42ded7377acd4088e0c7
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit de7fc9d250db39185151b0a100519800f42556fd)
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>